# svm-dtrees-multi-classification

./: .gitignore  Makefile.am  Makefile.in  README.md  checks.cpp  checks.h  common.cpp  common.h  configure  configure.ac  flag_def.h  flags.cpp  flags.h  predict_result.txt  rtc_common.cpp  rtc_common.h  test_label.txt  train_label.txt  train_test  train_test.cpp
autom4te.cache/: output.0  requests  traces.0  traces.1
